--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@ textarea{
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
+  width: 920px;
 }
 
 .jumbotron {
@@ -36,10 +37,21 @@ textarea{
   border-top: 1px solid white;;
 }
 
+.input-group-text {
+  border: none;
+}
+
+.form-control {
+  border: none;
+}
+
 .hour {
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  width: 100px;
+  text-align: center;
+  padding: 20px;
 }
 
 .past {
@@ -63,6 +75,8 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
+  width: 120px;
+  font-size: 20px;
 }
 
 .saveBtn i:hover {
